fixed css dynamic spacing between username and links, js card reverse worked also on the home page, fixed.

--- a/website/static/screen.css
+++ b/website/static/screen.css
@@ -24,27 +24,22 @@ header {
 	text-shadow: 0.09rem 0.09rem orangered;
 }
 
-img {
-	width: 30rem;
-	margin-top: 2rem;
-	margin-left: calc(50% - 15rem);
-}
-
-img:hover {
-	-webkit-transform: scaleX(-1);
-  transform: scaleX(-1);
-  -webkit-transition: 1s ease-in-out;
-}
-
 nav {
 	display: flex;
 	flex-direction: row;
-	justify-content: right;
+	justify-content: space-between;
 	align-items: center;
 	padding: 0.5rem;
 	border: 0.1rem solid black;
 	background-color: darkgrey;
 	background-image: linear-gradient(to left, #434343 0%, grey 90%);
+}
+
+.links {
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	margin-right: 2rem;
 }
 
 nav > .links > a {
@@ -61,10 +56,10 @@ nav > .links > a:hover {
 }
 
 nav #username {
-	padding-right: 20rem;
 	align-items: center;
 	text-shadow: 0.05rem 0.05rem red;
 	font-size: 1.5rem;
+	margin-left: 2rem;
 }
 
 main {
